# autoupdater-rs

./: Cargo.toml
src/: main.rs
